fixed tree spacing

--- a/app/styles/ascii/tree.scss
+++ b/app/styles/ascii/tree.scss
@@ -6,7 +6,7 @@ $christmasWhite: #f3f4f6;
 
 
 .tree {
-    font-size: 15px;
+    font-size: 18px;
 }
 .treeBody{
     color: $christmasDarkGreen;
